crates/tome-term/src/snapshots/tome__tests__insert_newline_single_cursor.snap
---
source: crates/tome-term/src/main.rs
expression: terminal.backend()
---
"1                                                                               "
"2                                                                               "
"~                                                                               "
"~                                                                               "
"~                                                                               "
"~                                                                               "
"~                                                                               "
"~                                                                               "
" INSERT  test.txt [+]  1:2                                                      "
"                                                                                "
