crates/tome-term/src/snapshots/tome__tests__line_numbers_multiple_lines.snap
---
source: crates/tome-term/src/main.rs
expression: terminal.backend()
---
"1 Line 1                                "
"2 Line 2                                "
"3 Line 3                                "
"4 Line 4                                "
"5 Line 5                                "
"~                                       "
"~                                       "
"~                                       "
" NORMAL  test.txt  1:1                  "
"                                        "
