crates/tome-term/src/snapshots/tome__tests__render_after_typing.snap
---
source: crates/tome-term/src/main.rs
assertion_line: 579
expression: terminal.backend()
---
"abc                                                                             "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
" INSERT  test.txt [+]  1:4                                                      "
"                                                                                "
