crates/tome-term/src/snapshots/tome__tests__render_cursor_movement.snap
---
source: crates/tome-term/src/main.rs
assertion_line: 601
expression: terminal.backend()
---
"Hello                                                                           "
"World                                                                           "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
" NORMAL  test.txt  2:3                                                          "
"                                                                                "
