crates/tome-term/src/snapshots/tome__tests__render_empty.snap
---
source: crates/tome-term/src/main.rs
assertion_line: 552
expression: terminal.backend()
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
" NORMAL  test.txt  1:1                                                          "
"                                                                                "
