crates/tome-term/src/snapshots/tome__tests__render_with_selection.snap
---
source: crates/tome-term/src/main.rs
expression: terminal.backend()
---
"Hello, World!                                                                   "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
" NORMAL  test.txt  1:1                                                          "
"                                                                                "
