crates/tome-term/src/snapshots/tome__tests__soft_wrap_long_line.snap
---
source: crates/tome-term/src/main.rs
expression: terminal.backend()
---
"1 The quick brown fox jumps over the ···"
"┆ lazy dog and keeps on running         "
"~                                       "
"~                                       "
"~                                       "
"~                                       "
"~                                       "
"~                                       "
" NORMAL  test.txt  1:1                  "
"                                        "
